# utils

./: .clang-format  .clang-tidy  CMakeLists.txt  readme.md
cmake/: FindLibUV.cmake
include/: args.hpp  exceptions.hpp  ra_utils.h  ra_utils.hpp  rautils.h  result.hpp  strtool.hpp  subprocess.hpp  timer.h  timer.hpp
include/crypto/: codec.h  diffie_hellman.h  encrypt.h  hash.h  random.h
include/exceptions/: exceptions.h
include/rautils/barcode/: qrcode.h
include/rautils/crypto/: codec.h  diffie_hellman.h  encrypt.h  hash.h  random.h
include/rautils/db/: sqlite.h
include/rautils/exceptions/: exceptions.h
include/rautils/misc/: atomic_queue.h  map_handler.h  mime_types.h  status.h  thread_id.h  uid.h
include/rautils/network/: general.h  request.h  websocket.h  ws_client.h
include/rautils/network/general/: authentication.h  cookie.h  header.h  query.h  url.h
include/rautils/network/websocket/: client.h  close_status.h  message.h  server.h
include/rautils/string/: strtool.h
include/rautils/system/: subprocess.h
include/request/: authentication.h  cookie.h  header.h  ip_resolve.h  method.h  mime_part.h  mime_parts.h  proxy.h  request.h  response.h
include/string/: strtool.h
include/subprocess/: args.h  result.h  subprocess.h
include/util/: map_handler.h  mime_types.h
include/websocket/: close_status.h  message_type.h  ws_client.h
script/: update_mime_types_data.py
src/: exceptions.cpp  strtool.cpp  subprocess.cpp
src/barcode/: qrcode.cc
src/barcode/qrcode/: result.cc
src/crypto/: codec.cc  diffie_hellman.cc  encrypt.cc  hash.cc  random.cc
src/db/: sqlite.cc
src/exceptions/: exceptions.cc
src/misc/: mime_types.cc  mime_types_data.cc  thread_id.cc  uid.cc
src/network/: request.cc  ws_client.cc
src/network/general/: authentication.cc  cookie.cc  header.cc  url.cc
src/network/request/: authentication.cc  cookie.cc  header.cc  mime_part.cc  mime_parts.cc  proxy.cc
src/network/websocket/: client.cc  close_status.cc  message.cc  server.cc
src/network/ws_client/: close_status.cc
src/request/: authentication.cc  cookie.cc  header.cc  mime_part.cc  mime_parts.cc  proxy.cc  request.cc
src/string/: strtool.cc
src/subprocess/: subprocess.cc
src/system/: subprocess.cc
src/system/subprocess/: args.cc
src/util/: map_handler.cc  mime_types.cc  mime_types_data.cc
src/websocket/: close_status.cc  ws_client.cc
test/: CMakeLists.txt  test.cpp  test_crypto.cc  test_mimetype.cc  test_qrcode.cc  test_request.cc  test_sqlite.cc  test_strtool.cc  test_strtool.cpp  test_subprocess.cc  test_subprocess.cpp  test_thread_id.cc  test_timer.cc  test_timer.cpp  test_uid.cc  test_url.cc  test_websocket.cc  test_wsserver.cc
